fix: removed x scrollbar

--- a/css/global.css
+++ b/css/global.css
@@ -23,7 +23,8 @@
 body {
   margin: 0px;
   font-family: 'Roboto Mono', monospace;
-  background-color: #222222
+  background-color: #222222;
+  overflow-x: hidden;
 }
 
 .text--secondary {
